# r-watchmen

./: Cargo.toml  README.md  cloc_modules.sh
model/: Cargo.toml
model/src/: lib.rs
model/src/analysis/: factor_index.rs  mod.rs  pipeline_index.rs
model/src/authorization/: mod.rs  tenant.rs  user.rs
model/src/common/: base.rs  data_result.rs  error_code.rs  graphic.rs  mod.rs  pagination.rs  storable.rs  tuple.rs  tuple_ids.rs
model/src/core/: achievement_plugin_task.rs  bucket.rs  catalog.rs  connected_space.rs  connected_space_ext.rs  convergence.rs  dashboard.rs  derived_objective.rs  derived_objective_report.rs  either_types.rs  enumeration.rs  factor.rs  indicator.rs  measure_method.rs  mod.rs  objective.rs  objective_criteria_condition.rs  objective_criteria_parameter.rs  objective_factor.rs  objective_report.rs  objective_target.rs  objective_timeframe.rs  objective_variable.rs  pipeline.rs  pipeline_monitor_log.rs  pipeline_trigger_data.rs  report.rs  space.rs  subject.rs  subject_dataset.rs  subject_ext.rs  subject_with_column_type.rs  topic.rs  topic_data.rs  topic_snapshot.rs
model/src/criteria/: computed_parameter.rs  constant_parameter.rs  mod.rs  parameter.rs  parameter_condition.rs  parameter_expression.rs  parameter_joint.rs  parameter_kind.rs  topic_parameter.rs
model/src/error/: mod.rs  std_error.rs
model/src/graphic/: bar_chart.rs  chart.rs  chart_def_item.rs  connected_space_graphic.rs  count_chart.rs  customized_chart.rs  echarts.rs  line_chart.rs  map_chart.rs  mod.rs  pie_chart.rs  pipeline_graphic.rs  scatter_chart.rs  sunburst_chart.rs  tree_chart.rs  treemap_chart.rs
model/src/lineage/: mod.rs
model/src/monitor/: job_lock.rs  mod.rs  result.rs  rule.rs  rule_detected.rs  rule_log.rs  topic_profile.rs
model/src/pipelines/: dqc.rs  mod.rs  pipeline_trigger_data.rs  query_performance.rs
model/src/profile/: favorite.rs  last_snapshot.rs  mod.rs  tenant.rs  user.rs  user_group.rs
model/src/serde/: mod.rs  naive_date.rs  naive_datetime.rs  naive_time.rs  option_naive_datetime.rs  option_naive_time.rs  serde_for_enum.rs
model/src/system/: ai_model.rs  data_source.rs  external_writer.rs  key_store.rs  mod.rs  operation.rs  package_version.rs  personal_access_token.rs  plugin.rs  sql_query_performance.rs  (+1 more)
pipeline_kernel/: Cargo.toml
pipeline_kernel/src/: lib.rs
runtime_model_kernel/: Cargo.toml
(+299 files in other folders)
