[package]
name = "watchmen_pipeline_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4"
chrono = "0.4"
tokio = { version = "1.48", features = ["rt"] }
watchmen_base = { path = "../base" }
watchmen_model = { path = "../model" }
watchmen_auth = { path = "../auth" }
watchmen_runtime_model_kernel = { path = "../runtime_model_kernel" }
