[package]
name = "elf_pipeline_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.10"
chrono = "0.4.42"
tokio = { version = "1.49.0", features = ["rt"] }
elf_base = { path = "../base" }
elf_model = { path = "../model" }
elf_auth = { path = "../auth" }
elf_runtime_model_kernel = { path = "../runtime_model_kernel" }
