[package]
name = "watchmen_runtime_model_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.10"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
md5 = "0.8.0"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
watchmen_base = { path = "../base" }
watchmen_model = { path = "../model" }
